# CMakeDemo

./: README.md
t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/doc/: hello.txt
t2/src/: CMakeLists.txt  main.cpp
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.cpp  hello.h
t3/src/: CMakeLists.txt  main.cpp
