PROJECT(HELLO)
SET(SRC_LIST main.cpp)
message(status "This is BINARY dir" ${HELLO_BINARY_DIR})
message(status "This is SOURCE dir" ${HELLO_SOURCE_DIR})
ADD_EXECUTABLE(hello ${SRC_LIST})
message(status "This is BINARY dir" ${PROJECT_BINARY_DIR})
message(status "This is SOURCE dir" ${PROJECT_SOURCE_DIR})
